@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.fyp {
    namespace student {
      namespace fragment {
        class com.fyp.student.fragment.StudentAttendRecordFragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            + StudentAttendRecordFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      namespace fragment {
        class com.fyp.student.fragment.StudentHomeFragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            + StudentHomeFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      namespace fragment {
        class com.fyp.student.fragment.studentViewPagerAdapter {
            + getCount()
            + getItem()
            + studentViewPagerAdapter()
        }
      }
    }
  }
  

  com.fyp.student.fragment.StudentAttendRecordFragment -up-|> androidx.fragment.app.Fragment
  com.fyp.student.fragment.StudentHomeFragment -up-|> androidx.fragment.app.Fragment
  com.fyp.student.fragment.studentViewPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
